fix margin on mobile headshot

--- a/css/style.css
+++ b/css/style.css
@@ -503,7 +503,7 @@ nav a:hover {
                 margin:auto;
         }
         .landing img {
-                margin:0 auto;
+                margin:1em auto 0;
         }
         article {
                 margin:3em 0;
